# sandbox-gleam

./: README.md  flake.nix
appimage_build/: README.md  flake.nix  gleam.nix  gleam.toml
appimage_build/src/: appimage_build.gleam
ex_gleam_hono/: .gitignore  README.md  deno.json  flake.nix  gleam.toml  manifest.toml
ex_gleam_hono/priv/: index.html
ex_gleam_hono/src/: deno.gleam  ex_gleam_hono.gleam  ffi.mjs  hono.gleam  main.ts
ex_gleam_k255_fork/src/k256/native/k256_rs/: Cargo.toml
ex_gleam_k255_fork/src/k256/native/k256_rs/src/: lib.rs
ex_gleam_redraw/: .gitignore  gleam.toml  index.html  manifest.toml  package.json  vite.config.js
ex_gleam_redraw/src/: ex_gleam_redraw.gleam  hello.jsx  main.jsx
ex_gleam_secp256k1/: README.jp.md  README.md  gleam.toml  manifest.toml
ex_gleam_secp256k1/src/: ex_gleam_secp256k1.gleam  nosnos_ffi.gleam
ex_gleam_secp256k1/test/: ex_gleam_secp256k1_test.gleam.disabled
ex_gleam_sqlite/: .gitignore  README.md  flake.nix  gleam.toml  manifest.toml  sqlc.yaml
ex_gleam_sqlite/docs/: sql-module.md
ex_gleam_sqlite/priv/: schema.sql  seed.sql
ex_gleam_sqlite/src/: ex_gleam_sqlite.gleam
ex_gleam_with_flake/: README.md  flake.nix  gleam.toml  manifest.toml  memo.org  nvfetcher.toml
ex_gleam_with_flake/_sources/: generated.json  generated.nix
ex_gleam_with_flake/src/: ex_gleam_with_flake.gleam
ex_gleam_workers/: README.md  gleam.toml  manifest.toml  wrangler.toml
ex_gleam_workers/src/: ex_gleam_workers.gleam  handler.gleam  helper.gleam  index.js
v1_3_0_ffi/: README.md  gleam.toml  manifest.toml
(+14 files in other folders)
