[package]
name = "k256_rs"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "k256_rs"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.33.0", features = ["nif_version_2_16"] }
k256 = "0.13.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
